# ws_test_client

./: CMakeLists.txt  README.md  main.cpp
head/: ws_client_connection.h
src/: ws_client_connection.cpp
ui/: add_timer_send_data_window.cpp  add_timer_send_data_window.h  add_timer_send_data_window.ui  data_window.cpp  data_window.h  data_window.ui  main_window.cpp  main_window.h  main_window.ui  time_task_window.cpp  time_task_window.h  time_task_window.ui
